# rv32i-emulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_PROCESS.md  VERSIONING.md  future_plans.md  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
assembler/: README.md  array_max.s  array_reverse.s  array_sum.s  bitwise_ops.s  bubble_sort.s  count_set_bits.s  csr_scratch.s  factorial_iterative.s  factorial_recursive.s  fibonacci.s  gcd.s  multiplication_table.s  string_length.s  test_sum.elf  test_sum.s
core/: CMakeLists.txt  main.cc  test_add  test_and  test_or  test_sll  test_slt  test_sltu  test_sra  test_srl  test_sub  test_xor
core/include/: constants.hpp  cpu.hpp  csr.hpp  decode.hpp  exception.hpp  execute.hpp  fetch.hpp  instruction.hpp  memory.hpp  register.hpp
core/src/: cpu.cc  csr.cpp  decode.cc  execute.cpp  fetch.cpp  pycpu.cpp
core/tests/: test_add.cc  test_addi.cc  test_and.cc  test_andi.cc  test_auipc.cc  test_beq.cc  test_bge.cc  test_bgeu.cc  test_blt.cc  test_bltu.cc  test_bne.cc  test_csrrc.cc  test_csrrci.cc  test_csrrs.cc  test_csrrsi.cc  test_csrrw.cc  test_csrrwi.cc  test_div_ext.cc  test_fence.cc  test_jal.cc  test_jalr.cc  test_lb.cc  test_lbu.cc  test_lh.cc  test_lhu.cc  test_lui.cc  test_lw.cc  test_memory_bounds.cc  test_mul_extension.cc  test_multi_r.cc  test_multi_r_run.cc  test_or.cc  test_ori.cc  test_sb.cc  test_sh.cc  test_sll.cc  test_slli.cc  test_slt.cc  test_slti.cc  test_sltiu.cc  (+10 more)
core/tests/common/: instr_encoders.hpp
docs/: ARCHITECTURE.md
documentation/: doc
gui/: code_editor.py  disassembler.py  disassembly_window.py  hexdump.py  main.py  main_window.py  memory_window.py  register_window.py  replace_dialog.py  settings.py  settings_dialog.py  stack_window.py  syntax_highlighter.py
gui/misc/: 1to9.x68  a.x68  memory_check.x68
gui/ui/: disassembly_window.ui  find_dialog.ui  main_window.ui  memory_window.ui  register_window.ui  replace_dialog.ui  stack_window.ui
misc/: Hello_World.x68  asdad.x68
resources/packaging/appimage/: entrypoint.sh  rv32i-emulator.desktop
scripts/: build_appimage.sh  fetch_toolchain.py  setup.ps1  setup.sh
src/: main.cc  main.py
src/gui/: find_dialog.py  main_window.py  main_window.ui  replace_dialog.py  replace_dialog.ui
src/gui/ui/: find_dialog.ui
tests/: conftest.py  test_pycpu.py
tests/gui/: test_main_window.py  test_replace_dialog.py  test_settings.py  test_stack_window.py  test_toolchain_discovery.py
